--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,11 @@
 version: '3.3'
 services:
+  db:
+    image: postgres:13.0-alpine
+    volumes:
+      - /var/lib/postgresql/data/
+    env_file:
+      - .env
 
   web:
     build:
@@ -8,6 +14,8 @@ services:
     volumes:
       - static:/app/static/
       - media:/app/media/
+    depends_on:
+      - db
 
   nginx:
     image: nginx:1.19.3
